--- a/src/components/pages/home.css
+++ b/src/components/pages/home.css
@@ -1,3 +1,93 @@
+/*PARALLELAX*/
+
+
+/* styles.css */
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
+
+.header {
+  text-align: center;
+  padding: 100px 0;
+  background: #3498db;
+  color: white;
+}
+
+.parallax {
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#parallax1 {
+  background-image: url('../pages/images/CloseupguitareWithCapo.webp');
+}
+
+#parallax2 {
+  background-image: url('../pages/images/jamSession.webp');
+}
+
+#parallax3 {
+  background-image: url('../pages/images/parallax3.jpg');
+}
+
+.content {
+  padding: 50px;
+  text-align: center;
+  background: #f4f4f4;
+}
+
+button {
+  background: none;
+}
+
+button:hover {
+  background: none;
+}
+
+/* .toRandomTunes {
+  border-radius: 12em;
+  font-size: 2em;
+  font-weight: 600;
+  background: white;
+  margin-block: auto;
+  color: #11a20c;
+
+  margin-inline: auto;
+  text-decoration: none;
+  padding-inline: 3rem;
+
+} */
+
+.toRandomTunes {
+  font-size: 2em;
+  font-weight: 600;
+  padding-inline: 3rem;
+box-shadow: 10px 10px;
+background: #63bf7c
+  /* #a3ffc3 */
+;
+color: #162029ed;
+text-decoration: none;
+}
+
+.toRandomTunes:hover {
+
+  background:rgb(247, 227, 6);
+/*   box-shadow: 0px 0px 15px -3px rgba(223, 210, 210, 0.897); */
+}
+
+
+ a {
+  padding: 1rem;
+}
+
 
 
 .enSavoirPlusBtn, .upPageBtn {
@@ -80,6 +170,10 @@
     animation-fill-mode: backwards;
 }
 
+li {
+  list-style-type: none;
+}
+
 @keyframes moveInBottom {
     0% {
         opacity: 0;
@@ -142,6 +236,7 @@
   align-items: center;
   width: 100%;
   height: 10vh;
+  margin-top: 3rem;
 }
 
 .chevron {
@@ -166,7 +261,7 @@
   content: '';
   position: absolute;
   top: 0;
-  height: 100%;
+  height: 25%;
   width: 50%;
   background: #4a8901;
 }
@@ -181,6 +276,7 @@
   width: 50%;
   transform: skewY(-30deg);
 }
+
 
 @keyframes move-chevron {
   25% {
