--- a/src/components/inc/Footer.css
+++ b/src/components/inc/Footer.css
@@ -1,5 +1,5 @@
 .customise {
     background: none;
 
-    box-shadow: 0px 0px 15px -3px rgba(223, 210, 210, 0.897);
+    box-shadow: 0px 0px 15px -3px rgba(32, 32, 32, 0.1)
 }
