--- a/src/components/pages/home.css
+++ b/src/components/pages/home.css
@@ -3,7 +3,8 @@
 
 /* styles.css */
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -15,6 +16,23 @@ body, html {
   padding: 100px 0;
   background: #3498db;
   color: white;
+}
+
+.hero {
+  margin-top: 12px;
+  background-color: #00000078;
+  color: #fff;
+  padding: 16px;
+  padding-bottom: 16px;
+  border-radius: 8px;
+
+  box-shadow: 0px 10px 20px #0000007a
+}
+
+.hero p {
+  color: #fff;
+  font-style: normal;
+  width: 32em;
 }
 
 .parallax {
@@ -66,44 +84,46 @@ button:hover {
 } */
 
 .toRandomTunes {
-  font-size: 2em;
+  font-size: 20px;
   font-weight: 600;
   padding-inline: 3rem;
-box-shadow: 10px 10px;
-background: #63bf7c
-  /* #a3ffc3 */
-;
-color: #162029ed;
-text-decoration: none;
+  box-shadow: 10px 10px;
+  background: #63bf7c
+    /* #a3ffc3 */
+  ;
+  color: #162029ed;
+  text-decoration: none;
 }
 
 .toRandomTunes:hover {
 
-  background:rgb(247, 227, 6);
-/*   box-shadow: 0px 0px 15px -3px rgba(223, 210, 210, 0.897); */
+  background: rgb(247, 227, 6);
+  /*   box-shadow: 0px 0px 15px -3px rgba(223, 210, 210, 0.897); */
 }
 
 
- a {
+a {
   padding: 1rem;
 }
 
 
 
-.enSavoirPlusBtn, .upPageBtn {
-    box-shadow: 10px 10px;
-    background: #63bf7c
-      /* #a3ffc3 */
-    ;
-    color: #162029ed;
-    text-decoration: none;
-  
-  }
-  
-  .upPageBtn:hover, .enSavoirPlusBtn:hover {
-    background-color: #f8e409;
-  }
-  
+.enSavoirPlusBtn,
+.upPageBtn {
+  box-shadow: 10px 10px;
+  background: #63bf7c
+    /* #a3ffc3 */
+  ;
+  color: #162029ed;
+  text-decoration: none;
+
+}
+
+.upPageBtn:hover,
+.enSavoirPlusBtn:hover {
+  background-color: #f8e409;
+}
+
 /*   .upPageBtn {
     box-shadow: 10px 10px;
     background: #63bf7c;
@@ -113,61 +133,61 @@ text-decoration: none;
   }
  */
 .text-box {
-    margin-left: 44vw;
-   margin-top: 42vh;
+  margin-left: 44vw;
+  margin-top: 42vh;
 }
 
 .btn:link,
 .btn:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 15px 40px;
-    display: inline-block;
-    border-radius: 100px;
-    transition: all .2s;
-    position: absolute;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+  position: absolute;
 }
 
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .btn-white {
-    background-color: #fff;
-    color: #777;
+  background-color: #fff;
+  color: #777;
 }
 
 .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
 }
 
 .btn-white::after {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
 }
 
 .btn-animated {
-    animation: moveInBottom 5s ease-out;
-    animation-fill-mode: backwards;
+  animation: moveInBottom 5s ease-out;
+  animation-fill-mode: backwards;
 }
 
 li {
@@ -175,28 +195,28 @@ li {
 }
 
 @keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(30px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
-  .lorem{
-    padding-block: 7em;
-    width: 39em;
+.lorem {
+  padding-block: 7em;
+  width: 39em;
   padding-block: 3em;
   width: auto;
   margin: auto;
 
-  }
+}
 
 .secondBlock {
-  
+
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -213,14 +233,14 @@ li {
   outline-offset: 0px;
   text-shadow: none;
   transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-} 
+}
 
 .btn-5:hover {
   border: 1px solid;
   box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
   outline-color: rgba(255, 255, 255, 0);
   outline-offset: 15px;
-  text-shadow: 1px 1px 2px #427388; 
+  text-shadow: 1px 1px 2px #427388;
 }
 
 /* ARROW DOWN */
@@ -278,18 +298,31 @@ li {
 }
 
 
+.lastPart {
+  background-color: #00000078;
+  color: #fff;
+  padding: 16px;
+  padding-bottom: 16px;
+  border-radius: 8px;
+
+  box-shadow: 0px 10px 20px #0000007a
+}
+
 @keyframes move-chevron {
   25% {
     opacity: 1;
   }
+
   33.3% {
     opacity: 1;
     transform: translateY(calc(0.6rem * 3.8));
   }
+
   66.6% {
     opacity: 1;
     transform: translateY(calc(0.6rem * 5.2));
   }
+
   100% {
     opacity: 0;
     transform: translateY(calc(0.6rem * 8)) scale(0.5);
